--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "classnames": "^2.3.1",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "firebase": "^8.6.8",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
@@ -50,6 +54,6 @@
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
     "eslint": "^7.29.0",
-    "eslint-plugin-react": "^7.24.0"
+    "eslint-plugin-react": "^7.21.5"
   }
 }
