--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
     "es2021": true
   },
   "extends": [
-    "eslint:recommended",
+    "airbnb",
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended"
   ],
@@ -18,7 +18,10 @@
   },
   "plugins": [
     "react",
-    "@typescript-eslint"
+    "@typescript-eslint",
+    "jsx-a11y",
+    "import",
+    "react-hooks"
   ],
   "rules": {
   }
