--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
   "rules": {
       "react/jsx-filename-extension": [1, { "extensions": [".tsx", ".jsx"] }],
       "react/react-in-jsx-scope": "off",
+      "react/prop-types": "off",
       "global-require": "off",
       "import/prefer-default-export": "off",
       "import/no-unresolved": "off",
