updated eslint own rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
       "react/jsx-filename-extension": [1, { "extensions": [".tsx", ".jsx"] }],
       "react/react-in-jsx-scope": "off",
       "react/prop-types": "off",
+      "react/jsx-props-no-spreading": "off",
       "global-require": "off",
       "import/prefer-default-export": "off",
       "import/no-unresolved": "off",
