--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/styled-components": "^5.1.11",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
+    "commitizen": "^4.2.4",
     "eslint": "^7.29.0",
     "eslint-plugin-react": "^7.21.5",
     "husky": "^7.0.1"
