feat: husky hook prepare-commit-msg added

--- a/package.json
+++ b/package.json
@@ -32,6 +32,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "husky": {
+    "hooks": {
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+    }
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
